@@ -1,0 +1,15 @@
+<!DOCTYPE node PUBLIC "-//freedesktop//DTD D-BUS Object Introspection 1.0//EN"
+"http://www.freedesktop.org/standards/dbus/1.0/introspect.dtd">
+<node>
+  <interface name="org.gnome.SettingsDaemon">
+    <method name="Awake" />
+    <method name="Start" />
+    <signal name="PluginActivated">
+      <arg type="s"/>
+    </signal>
+    <signal name="PluginDeactivated">
+      <arg type="s"/>
+    </signal>
+  </interface>
+</node>
+"
